Add ceph-dashboard manager module to the snap
Signed-off-by: Chris MacNaughton <chris.macnaughton@canonical.com>

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -104,6 +104,7 @@ parts:
       - ceph-common
       - ceph-mds
       - ceph-mgr
+      - ceph-mgr-dashboard
       - ceph-mon
       - ceph-osd
       - radosgw
