Add content-interface for ceph config
This content-interface exposes ceph configuration, creds and metadata
to enable deep integration with a MicroCeph cluster

Signed-off-by: Peter Sabaini <peter.sabaini@canonical.com>

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -47,6 +47,11 @@ jobs:
           sudo microceph.ceph version
           sudo microceph.ceph status
 
+          # Verify metadata.yaml
+          meta=/var/snap/microceph/current/conf/metadata.yaml
+          cat $meta
+          grep -q ceph-version $meta
+
           # Allow ceph to notice no OSD are present
           sleep 30
           sudo microceph.ceph status
