Add libtcmalloc to the snap
Signed-off-by: Peter Sabaini <peter.sabaini@canonical.com>

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -198,6 +198,8 @@ parts:
       - lib/*/libwind.so*
       - lib/python3
       - lib/*/rados-classes
+      - lib/*/libtcmalloc.so*
+      - lib/*/libunwind.so*
       - share/ceph
 
   deps:
