--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -97,6 +97,7 @@ apps:
     command: commands/ceph
     plugs:
       - network
+      - home
   "radosgw-admin":
     command: commands/radosgw-admin
     plugs:
