--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,4 +1,11 @@
 version: 2
+build:
+  os: "ubuntu-22.04"
+  tools:
+    python: "3.11"
+  jobs:
+    post_checkout:
+      - git fetch --unshallow || true
 
 sphinx:
   builder: dirhtml
