Adds microceph client configuration support for rbd_cache
Signed-off-by: Utkarsh Bhatt <utkarsh.bhatt@canonical.com>

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -285,6 +285,8 @@ jobs:
         fi
         lxc exec node-head -- sh -c "microceph.ceph -s" | fgrep "mon: 3 daemons"
 
+    - name: Test client configurations
+      run: ~/actionutils.sh check_client_configs
 
   upgrade-quincy-tests:
     name: Test quincy upgrades
