--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -41,6 +41,7 @@ apps:
     daemon: simple
     plugs:
       - block-devices
+      - raw-volume
       - dm-crypt
       - hardware-observe
       - network
@@ -78,6 +79,7 @@ apps:
     stop-timeout: 5m
     plugs:
       - block-devices
+      - raw-volume
       - dm-crypt
       - hardware-observe
       - network
@@ -107,6 +109,7 @@ apps:
     plugs:
       - network
       - block-devices
+      - raw-volume
       - dm-crypt
   rbd:
     command: commands/rbd
